# pyramid_caching

./: .coveragerc  .gitignore  .travis.yml  AUTHORS  CHANGES.rst  README.md  README.rst  requirements-dev.txt  requirements-test.txt  setup.cfg  setup.py
example/: __init__.py  model.py  views.py
pyramid_caching/: __init__.py  cache.py  events.py  exc.py  interfaces.py  key_versioner.py  serializers.py  versioner.py  versioners.py
pyramid_caching/ext/: __init__.py  metrics.py  redis.py  royal.py  sqlalchemy.py  umemcache.py
pyramid_caching/tests/functional/: __init__.py  test_cache.py  test_disable.py  test_metrics.py  test_sqlachemy.py
pyramid_caching/tests/unittests/: test_cache.py  test_cache_client.py  test_events.py  test_include.py  test_key_versioners.py  test_metrics_extension.py  test_royal_extension.py  test_serializers.py  test_sqlalchemy_extension.py  test_versioners.py
