[metadata]
name = pyramid_caching
version = 0.1
summary = Key versioning caching for pyramid.
description-file =
    README.rst
    CHANGES.rst
requires-dist =


[files]
packages =
    pyramid_caching

package_data =

[nosetests]
match = ^test
detailed-errors = 1
nocapture = 1
cover-package = pyramid_caching
cover-inclusive = 1
with-xcoverage = 1
with-xunit = 1
cover-erase = 1
verbosity = 3
with-id = 1
with-yanc = 1
