[metadata]
name = pyramid_caching
summary = Key versioning caching for pyramid.
version = 0.2.2
author = Hadrien David
author_email = hadrien+pypi@ectobal.com
home_page = https://github.com/hadrien/pyramid_caching
description-file =
    README.rst
    CHANGES.rst
requires-dist =
    pyramid
keywords = web wsgi pylons pyramid cache
classifier =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Framework :: Pyramid
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI

[files]
packages =
    pyramid_caching
    pyramid_caching.ext

package_data =

[nosetests]
match = ^test
detailed-errors = 1
nocapture = 1
cover-package = pyramid_caching, example
cover-inclusive = 1
with-xcoverage = 1
with-xunit = 1
cover-erase = 1
verbosity = 3
with-id = 1
with-yanc = 1
